# NED-Batch7-Data-Visualization

./: .gitignore  PGD.txt  class_10.txt  class_3_notes.txt  class_4.txt  class_5.md  class_5.txt  class_7.txt  class_8.txt  class_9.txt  pandas_documentation.ipynb
01-File-Handling/: code.ipynb  code1.ipynb  mycopy_code1.ipynb
02-Docker/: README.md
02-Docker/project1/: Dockerfile  my_code.py
03-Poetry/project1/: pyproject.toml
03-Poetry/project1/project1/: main.py
03-Poetry/project1/tests/: test_main.py
04-Regex(docker compose)/: Dockerfile  readme.md
04-Regex(docker compose)/notebooks/: re_attendance.ipynb  regex.ipynb
04-Regex(docker compose)/notebooks/.ipynb_checkpoints/: whatsapp-checkpoint.ipynb
05-PostgressSQL/: class_work.sql  compose.yaml  neon_console_sql.sql  readme.md
06-numpy_pandas/: numpy.ipynb
06-numpy_pandas/.ipynb_checkpoints/: numpy-checkpoint.ipynb
Assignment/: car_sales.sql
Assignment/postgres_db/: compose.yml
final_examination/: kaggle.json
final_examination/.ipynb_checkpoints/: Data_Visualisation_Batch_7_Final-checkpoint.ipynb  final_umer-checkpoint.ipynb
practice_data/: dummy_diabetes.ipynb  dummy_titanic.ipynb
practice_data/.ipynb_checkpoints/: dummy_titanic-checkpoint.ipynb
streamlit/: app.py
streamlit/myenv/: pyvenv.cfg
streamlit/myenv/Scripts/: activate  activate.bat
