[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Muhammad Umer Adeeb <umeradeeb94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
